<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nctu.darkgerm.mnhw1.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/GPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GPS = (-, -)"
        android:textSize="20.0sp" />

    <TextView
        android:id="@+id/Orient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Orientation = (-, -, -)"
        android:textSize="20.0sp" />

    <TextView
        android:id="@+id/Accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accelerometer = (-, -, -)"
        android:textSize="20.0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Strat_Capture" />

        <Button
            android:id="@+id/Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stop_Capture" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IP"
            android:textSize="20.0sp" />

        <EditText
            android:id="@+id/IP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Port"
            android:textSize="20.0sp" />

        <EditText
            android:id="@+id/Port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/SendGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send_GPS" />

    <Button
        android:id="@+id/SendOrient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send_Orientation" />

    <Button
        android:id="@+id/SendAccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send_Accelerometer" />

</LinearLayout>
